# help-me-bob

./: MANIFEST.in  README.md  pyproject.toml
notebooks/: check_data.ipynb
src/help_me_bob/: __init__.py  __main__.py  models.py  services.py
tests/: conftest.py
