[project]
name = "help-me-bob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.3",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[project.scripts]
help-me-bob = "help_me_bob.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/help_me_bob"]
include = ["src/help_me_bob/data/*.csv"]

[tool.hatch.build]
include = [
    "src/help_me_bob/**/*.py",
    "src/help_me_bob/data/*.csv",
]
