[project]
name = "help-me-bob"
version = "0.1.2"
description = "Get random Bob Dylan lyrics whenever you need them"
authors = [{name = "rafa sacaan", email = "rafasacaan@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
[project.scripts]
help-me-bob = "help_me_bob.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/help_me_bob"]
include = ["src/help_me_bob/data/*.csv"]

[tool.hatch.build]
include = [
    "src/help_me_bob/**/*.py",
    "src/help_me_bob/data/*.csv",
]

[project.urls]
Homepage = "https://github.com/rafasacaan/help-me-bob"
